--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +9,7 @@
 
 html {
     scroll-behavior: smooth;
+}
+body {
+    font-family: 'Raleway', sans-serif;
 }
